--- a/exam.Rmd
+++ b/exam.Rmd
@@ -3,7 +3,7 @@ title: "Digital tentamen (1.5 hp, betyg A-F)"
 output: html_document
 ---
 
-En digital tentamen, motsvarande 1.5 hp, är schemalagd eftermiddagen **2018-02-27**. Denna examinerar grundläggande färdighet i att använda kursens verktyg med flervalsfrågor samt problemlösning i RStudio-miljö. Tillåtna hjälpmedel kommer inkludera
+En digital tentamen, motsvarande 1.5 hp, är schemalagd eftermiddagen **2018-02-27**. Denna examinerar grundläggande färdighet i att använda kursens verktyg med flervalsfrågor samt problemlösning i RStudio-miljö, utan tillgång till internet. Tillåtna hjälpmedel kommer inkludera
 
 * [R Markdown Cheat Sheet](https://github.com/rstudio/cheatsheets/raw/master/rmarkdown-2.0.pdf)
 * [Data Visualization Cheat Sheet](https://github.com/rstudio/cheatsheets/raw/master/data-visualization-2.1.pdf)
@@ -12,3 +12,5 @@ En digital tentamen, motsvarande 1.5 hp, är schemalagd eftermiddagen **2018-02-
 * [Working with Strings Cheat Sheet](https://github.com/rstudio/cheatsheets/raw/master/strings.pdf)
 
 som delas ut i samband med tentamen. Utöver dessa kommer även ett SQL Cheat Sheet delas ut.
+
+Följande R-paket kommer vara tillgängliga: `tidyverse` (t.ex. `dplyr`, `tidyr`, `readr`, `tidyr`, `stringr`), `rmarkdown`, `knitr`, `DBI`, `rsqlite`, `rebus`, `jsonlite`, `listviewer`, `xml2`.
