--- a/HW.Rmd
+++ b/HW.Rmd
@@ -15,7 +15,7 @@ HW <- c(
     "[HW2: Grundläggande tidyverse](HW2.html)",
     "[HW3: Tabellhantering](HW3.html)",
     "[HW4: Austen vs Rowling](HW4.html)",
-    "HW5",
+    "[HW5: Externa data](HW5.html)",
     "HW6"
 )
 deadline <- seq(as.Date("2018/1/21"), by = "week", length.out = 6)
