--- a/HW.Rmd
+++ b/HW.Rmd
@@ -16,7 +16,7 @@ HW <- c(
     "[HW3: Tabellhantering](HW3.html)",
     "[HW4: Austen vs Rowling](HW4.html)",
     "[HW5: Externa data](HW5.html)",
-    "HW6"
+    "[HW6: Stjärnornas krig](HW6.html)"
 )
 deadline <- seq(as.Date("2018/1/21"), by = "week", length.out = 6)
 knitr::kable(data.frame(Homework = HW, Deadline = deadline))
